--- a/style.css
+++ b/style.css
@@ -1,18 +1,25 @@
-html, body {
-    height: 100%;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
+html,
+body {
+  height: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
 }
 
 .container {
-    margin-left: 5rem;
-    width: 100%;
-  
+  margin-left: 5rem;
+  width: 100%;
 }
 
 .container:first-child p {
-    margin-left: 9rem;
+  margin-left: 9rem;
 }
-/* h1 {
-    font-size: 2em;
-} */
+h3 {
+  font-size: 1.5em;
+}
+a {
+  text-decoration: none;
+  color: red;
+}
+a:active {
+  color: blue;
+}
